--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,10 @@
     <title>Pitch It</title>
 </head>
 <body>
-   <h1>Home Page</h>
+    {% for post in posts %}
+        <h1>{{ post.title }}</h1>
+        <p>By {{ post.author }} on {{ post.date_posted }}</p>
+        <p>{{ post.content}}</p>
+    {% endfor %}
 </body>
 </html>
