--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
     {% for post in posts %}
-    <h1>About</h1>
+      <h1>About Page</h1>
     {% endfor %}
 {% endblock content %}
