--- a/templates/post.html
+++ b/templates/post.html
@@ -4,7 +4,7 @@
           <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post .author.image_file) }}">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="#">{{ post.author.username }}</a>
+              <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
               <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
               {% if post.author == current_user %}
                 <div>
@@ -17,6 +17,7 @@
             </div>
               <h2><a class="article-title">{{ post.title }}</a></h2>
             <p class="article-content">{{ post.content }}</p>
+            <p class="article-category">{{ post.category }}</p>
           </div>
         </article>
         <!-- Modal -->
@@ -34,6 +35,7 @@
                 <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
                     <input class="btn btn-danger" type="submit" value="Delete">
                 </form>
+              </div>
               </div>
             </div>
           </div>
