--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -20,6 +20,7 @@
             <p class="article-category">{{ post.category }}</p>
             <h4 class="card-text d-inline mr-3"><small class="text-muted"><a href="/home">likes</a> 6</small></h4>
             <h4 class="card-text d-inline mr-3"><small class="text-muted"><a href="/home">dislikes</a> 1</small></h4>
+              <h4 class="card-text d-inline mr-3"><small class="text-muted"><a href="{{ url_for('users.login') }}">comments</a></small></h4>
 
           </div>
         </article>
